--- a/login.html
+++ b/login.html
@@ -1,1 +1,37 @@
-<!DOCTYPE html><html><head><title>Login</title></head><body><h2>Login</h2><form><input type='email' placeholder='Email'><br><input type='password' placeholder='Password'><br><button>Login</button></form></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Login</title>
+  <script type="module" src="firebase.js"></script>
+</head>
+<body>
+  <h2>Login</h2>
+  <form id="loginForm">
+    <input type="email" id="email" placeholder="Email" required><br>
+    <input type="password" id="password" placeholder="Password" required><br>
+    <button type="submit">Login</button>
+  </form>
+
+  <script type="module">
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
+    import { app } from './firebase.js';
+    const auth = getAuth(app);
+
+    const loginForm = document.getElementById('loginForm');
+    loginForm.addEventListener('submit', (e) => {
+      e.preventDefault();
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          alert("Login successful!");
+          window.location.href = "dashboard.html";
+        })
+        .catch((error) => {
+          alert("Login failed: " + error.message);
+        });
+    });
+  </script>
+</body>
+</html>
