--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,30 @@
-<!DOCTYPE html><html><head><title>User Dashboard</title></head><body><h2>Welcome to your Wallet</h2><p>Balance: $0.00</p></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dashboard</title>
+  <script type="module" src="firebase.js"></script>
+</head>
+<body>
+  <h2>Welcome to GlobalSIM Dashboard</h2>
+  <button id="logoutBtn">Logout</button>
+
+  <script type="module">
+    import { onAuthStateChanged, signOut } from "./firebase.js";
+
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        window.location.href = "login.html";
+      } else {
+        document.body.insertAdjacentHTML('beforeend', `<p>Logged in as: ${user.email}</p>`);
+      }
+    });
+
+    document.getElementById("logoutBtn").addEventListener("click", () => {
+      signOut(auth).then(() => {
+        window.location.href = "login.html";
+      });
+    });
+  </script>
+</body>
+</html>
