--- a/login.html
+++ b/login.html
@@ -5,43 +5,31 @@
 </head>
 <body>
   <h2>Login</h2>
-  <input type="email" id="email" placeholder="Email"><br>
-  <input type="password" id="password" placeholder="Password"><br>
-  <button onclick="login()">Login</button>
+  <form id="loginForm">
+    <input type="email" id="email" placeholder="Email" required><br>
+    <input type="password" id="password" placeholder="Password" required><br>
+    <button type="submit">Login</button>
+  </form>
 
-  <p id="message"></p>
-
-  <!-- Firebase SDK -->
+  <!-- Firebase login script -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { auth, signInWithEmailAndPassword } from './firebase.js';
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAyHjcP2xbiv6FqxGT8bWQI-RkttS1LekA",
-      authDomain: "globalsim-80108.firebaseapp.com",
-      projectId: "globalsim-80108",
-      storageBucket: "globalsim-80108.appspot.com",
-      messagingSenderId: "577978389706",
-      appId: "1:577978389706:web:ffb307cf23a00237da1033",
-      measurementId: "G-KJV1E1ZL71"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    window.login = async function() {
+    document.getElementById("loginForm").addEventListener("submit", (e) => {
+      e.preventDefault();
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
-      try {
-        const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        document.getElementById("message").innerText = "✅ Logged in as " + userCredential.user.email;
-        // Redirect to dashboard
-        // window.location.href = "dashboard.html"; 
-      } catch (error) {
-        document.getElementById("message").innerText = "❌ " + error.message;
-      }
-    };
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          alert("Login successful!");
+          window.location.href = "dashboard.html"; // or "admin.html"
+        })
+        .catch((error) => {
+          alert("Login failed: " + error.message);
+          console.error(error);
+        });
+    });
   </script>
 </body>
 </html>
